# MAIA-Enterprise-Kernal

./: README.md  demonstrate_governance.py  pyproject.toml  test_kernel.py  test_ollama_governance.py
src/primordial_kernel/: __init__.py  __main__.py  abacus.py  governor.py  inertia_guard.py  regulator.py  signal_encoder.py
