[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MAIA-Enterprise-Kernal"
version = "1.0.0"
authors = [{name = "Architect", email = "architect@silicon.foundation"}]
description = "MAIA Enterprise Kernal — A Homeostatic Regulator for AI-Agentic Workflows"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
]

[project.scripts]
maia = "primordial_kernel.__main__:main"
