[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MAIA-Enterprise-Kernal"
version = "3.0.0"
authors = [{name = "Architect", email = "architect@silicon.foundation"}]
description = "MAIA Enterprise Kernal v3 — Homeostatic Regulator with Semantic + Syntactic Flux"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
maia = "primordial_kernel.__main__:main"
